test/testData/parser/negative/auto_kw.c




auto int x;

auto static int y;

auto int foo() {
  return 42;
}


int bar() {
  auto auto int z;

  register auto int a;
}



int tex(float f) {
  return (auto int)f;
}
